--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -231,7 +231,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="New RM Order"/>
+                <Property name="text" type="java.lang.String" value="Create New Blend Order"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addNewBlendsBtnActionPerformed"/>
@@ -740,7 +740,7 @@
                                   </Group>
                                   <Component id="addProductBtn" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="15" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="searchProductTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="searchProductBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
