--- a/src/teaeli/CreateNewBlendOrder.form
+++ b/src/teaeli/CreateNewBlendOrder.form
@@ -53,7 +53,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder justification="2" title=" New RM Order ">
+            <TitledBorder justification="2" title=" Create New Blend Order ">
               <Font PropertyName="font" name="Segoe UI Semibold" size="16" style="0"/>
             </TitledBorder>
           </Border>
@@ -77,19 +77,19 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jLabel2" alignment="0" min="-2" pref="125" max="-2" attributes="0"/>
+                                      <Component id="jLabel2" min="-2" pref="125" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jTextField1" pref="101" max="32767" attributes="0"/>
+                                          <Component id="jTextField1" min="-2" pref="89" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jComboBoxWeight" max="32767" attributes="0"/>
+                                          <Component id="jComboBoxWeight" min="-2" pref="34" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="btnAdd" pref="60" max="32767" attributes="0"/>
+                                          <Component id="btnAdd" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
-                              <Component id="jLabel15" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="33" max="32767" attributes="0"/>
                           <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
@@ -221,43 +221,49 @@
             <Component class="javax.swing.JTable" name="tblOrder">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="1">
+                  <Table columnCount="7" rowCount="1">
                     <Column editable="false" title="Blend Name" type="java.lang.Object"/>
-                    <Column editable="false" title="Qty Required" type="java.lang.Object"/>
-                    <Column editable="false" title="Qty in stock(g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Qty Required (g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Visible Stock (g)" type="java.lang.Object"/>
+                    <Column editable="true" title="Invisible Stock (g)" type="java.lang.Object"/>
                     <Column editable="false" title="Balance Qty Required(g)" type="java.lang.Object"/>
-                    <Column editable="false" title="Excess Qty Required(g)" type="java.lang.Object"/>
-                    <Column editable="false" title="Final Order Qty(g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Excess Qty (g)" type="java.lang.Object"/>
+                    <Column editable="true" title="Final Qty (g)" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="20" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
@@ -294,49 +300,55 @@
             <Component class="javax.swing.JTable" name="tblMasterPlan">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="1">
+                  <Table columnCount="8" rowCount="1">
                     <Column editable="false" title="Ingredient" type="java.lang.Object"/>
-                    <Column editable="false" title="Qty needed (g)" type="java.lang.Object"/>
-                    <Column editable="false" title="Qty in Stock (g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Qty Required (g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Visible Stock (g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Invisible Stock (g)" type="java.lang.Object"/>
                     <Column editable="false" title="Balance Qty Required (g)" type="java.lang.Object"/>
-                    <Column editable="false" title="Excess Qty Required(g)" type="java.lang.Object"/>
+                    <Column editable="false" title="Excess Qty (g)" type="java.lang.Object"/>
+                    <Column editable="true" title="Final Qty (g)" type="java.lang.Object"/>
                     <Column editable="false" title="Supplier Name" type="java.lang.Object"/>
-                    <Column editable="true" title="Final Order Qty (g)" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="120" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
